Many refinements to experiment execution. More coming soon...